[JENKINS-33741] Adding more test cases for SSH Slaves Plugin